# facture_rs

./: Cargo.toml  LICENSE  README.md
examples/: simple_tax.json
src/: auth.rs  lib.rs  request.rs
src/auth/: authorize.rs  error.rs  input.rs  mod.rs  password.rs  refresh_token.rs  response.rs
src/auth/utils/: app.rs  credentials.rs  input.rs  mod.rs
src/belling/: json.rs  mod.rs
src/belling/utils/: input.rs  mod.rs
src/belling/utils/core/: comprobante.rs  enums.rs  error.rs  mod.rs  response.rs
src/belling/utils/json/: data.rs  emisor.rs  entity.rs  input.rs  json_raw.rs  mod.rs  sucursal.rs
src/belling/utils/xml/: input.rs
src/core/: app.rs  cons.rs  credentials.rs  mod.rs
src/emisor/: get.rs
src/sucursal/: get.rs
src/sucursal/utils/: error.rs  filters.rs  input.rs  mod.rs  response.rs
tests/: auth_password.rs  mod.rs
tests/auth/: authorize.rs  mod.rs  password.rs  refresh_token.rs
tests/belling/: json.rs  mod.rs  xml.rs
