[package]
name = "facture_api"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A wrapper for the FactureApp API service."
repository = "https://github.com/DotChoco/facture_api"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
