[package]
name = "facture_api"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A wrapper for the FactureApp API service."
repository = "https://github.com/DotChoco/facture_api"
homepage = "https://github.com/DotChoco/facture_api"
readme = "README.md"
keywords = ["rust", "cli"]



[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version="1.48", features = ["macros", "rt-multi-thread", "fs"] }
