[package]
name = "facture_rs"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A wrapper for the FactureApp API service."
repository = "https://github.com/DotChoco/facture_rs"
homepage = "https://github.com/DotChoco/facture_rs"
readme = "README.md"
keywords = ["rust", "cli"]



[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version="1.48", features = ["macros", "rt-multi-thread", "fs"] }
